Sync team6 project implementation